# d3d12basecamp

./: .gitignore  CMakeLists.txt  README.md  doc.md  premake5.lua
src/: main.cpp  stdafx.h
src/app/: app.cpp  app.h
src/common/: CMakeLists.txt  common.h
src/common/debug/: debugOutput.cpp  debugOutput.h  debugUtil.h
src/common/graphic/: graphic.h  graphic_cpp.h  mesh_data.h  mesh_data_generator.cpp  mesh_data_generator.h
src/device_d3d11/: main.cpp  stdafx.h
src/device_d3d11/app/: app.cpp  app.h
src/device_d3d11/renderer/d3d11/: device.h
src/device_d3d12/: CMakeLists.txt  engine.h  engineImpl.cpp  engineImpl.h  engine_cpp.h  main.cpp  stdafx.h
src/device_d3d12/app/: app.cpp  app.h
src/device_d3d12/graphic/: mesh_renderer.cpp  mesh_renderer.h
src/device_d3d12/renderer/: renderer.h  renderer_cpp.h
src/device_d3d12/renderer/d3d12/: command_list.cpp  device.cpp  device.h  frame_resource.cpp  frame_resource.h  input_layout_desc.cpp  input_layout_desc.h  input_layout_element_desc_consts.h  mesh_buffer.cpp  mesh_buffer.h  resource_manager.cpp  resource_manager.h  shader_manager.cpp  shader_reflection.h
src/device_d3d12/shaders/: default.ps.hlsl
src/device_vulkan/: device_vulkan.cpp.h  device_vulkan.h  main.cpp  stdafx.h
src/device_vulkan/app/: app.cpp  app.h
src/device_vulkan/dev/: device.cpp  device.h  global.h  resource_mgr.cpp  resource_mgr.h
src/device_vulkan/graphic/: mesh_renderer.cpp  mesh_renderer.h
src/engine/: engine.h  engineImpl.cpp  engineImpl.h  engine_cpp.h
src/engine/graphic/: graphic_cpp.h  mesh_data.cpp  mesh_data.h  mesh_data_generator.h  mesh_renderer.cpp  mesh_renderer.h
src/engine/renderer/: renderer.h  renderer_cpp.h
src/engine/renderer/d3d12/: default_buffer.h  device.cpp  device.h  frameResource.cpp  frameResource.h  graphic_pipeline_state_desc.h  shader_manager.cpp  shader_manager.h
src/shaders/: default.ps.hlsl  default.vs.hlsl  default_shared.hlsli  mesh.vs.hlsl
src/shaders_hlsl/: CMakeLists.txt  default.ps.hlsl  default.vs.hlsl  mesh.vs.hlsl
